# uss-ss-benchmark

./: .gitignore  README.md  Star Schema.tmdl  TPC-DS Benchmark.ipynb  TPC-DS Generator.ipynb  Unified Star Schema.tmdl  index.html  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
semantic_models/: Unified Star Schema.tmdl
