[project]
name = "uss-ss-benchmark"
version = "0.1.0"
description = "Benchmark Unified Star Schema against Star Schema in Microsoft Fabric using TPC-DS dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "httpx>=0.28.1",
    "marimo>=0.18.4",
]
